# correlis

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LOCAL_DEVELOPMENT.md  Makefile  NOTICE  README.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  README.md
migrations/: env.py
migrations/versions/: 0001_observation_evidence_store.py  0002_collector_identity.py  0003_durable_observation_sequence.py  0003_observation_sequence.py  (+6 more)
scripts/: bootstrap_local.py  local_smoke.py
services/api/: pyproject.toml
services/api/src/correlis_api/: admin.py  app.py  body_limits.py  collector_auth.py  dependencies.py  health.py  ingestion.py  observation_queries.py  observation_stream.py  observation_stream_runtime.py  pagination.py  request_context.py  scenarios.py  scene.py  settings.py  sse.py  stream_connections.py  stream_cursor.py
tests/: test_actions.py  test_admin.py  test_api.py  test_collector_auth.py  test_correlation_evaluation.py  test_correlation_projection_runner.py  test_correlation_rule_catalog.py  test_entities.py  test_entity_projection.py  test_entity_projection_runner.py  test_entity_repository.py  test_ingestion.py  test_observation_stream_api.py  test_observation_stream_store.py  test_ontology.py  test_pagination.py  test_projections.py  test_relationship_projection.py  test_scene.py  test_schema.py  test_sse.py  test_store.py  test_store_postgres.py  test_stream_connections.py  test_stream_cursor.py
(+2 files in other folders)
